Fixed background on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,4 +6,5 @@ body {
   background-image: url("./assets/SpongeBob_BfBB_00.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  height: 100vh
 }
